--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,8 @@
 		<url>www.whenling.com</url>
 	</organization>
 	<modules>
-		<module>brick-base</module>
-		<module>brick-console</module>
-		<module>brick-site</module>
-		<module>brick-web</module>
+		<module>brick-shop</module>
+		<module>brick-main</module>
+		<module>brick-cms</module>
 	</modules>
 </project>
