--- a/brick-main/brick-base/pom.xml
+++ b/brick-main/brick-base/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.whenling</groupId>
-		<artifactId>castle-bricks</artifactId>
+		<artifactId>brick-main</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>brick-base</artifactId>
